# automated-patch-management

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
config/: inventory.example.yaml  settings.example.yaml
data/: vulns.example.json
docker-test/ubuntu/: .dockerignore  Dockerfile  README.md  authorized_keys  docker-compose.yml  settings.yaml
docker-test/ubuntu/scripts/: build.ps1  build.sh  run.ps1  run.sh  stop.ps1  stop.sh  test-patch.ps1  test-patch.sh  test-scan.ps1  test-scan.sh
docker-test/windows/: .dockerignore  Dockerfile  README.md  docker-compose.yml  settings.yaml
docker-test/windows/scripts/: build.ps1  build.sh  run.ps1  run.sh  stop.ps1  stop.sh  test-patch.ps1  test-patch.sh  test-scan.ps1  test-scan.sh
docs/: EXPLAINER.md  SECURITY.md  USAGE.md
samples/: README.md  report.json
src/patchmgr/: __init__.py  __main__.py  cli.py  config.py  credentials.py  logging_setup.py
src/patchmgr/engine/: __init__.py  discovery.py  prioritizer.py  reboot.py  remediator.py  runner.py
src/patchmgr/handlers/: __init__.py  aix.py  base.py  linux.py  windows.py
src/patchmgr/reporting/: __init__.py  models.py  writer.py
src/patchmgr/reporting/templates/: report.html.j2
src/patchmgr/transport/: __init__.py  base.py  ssh.py  winrm.py
src/patchmgr/utils/: __init__.py  retry.py  shell.py
src/patchmgr/vulnsource/: __init__.py  base.py  factory.py  local_json.py  nvd.py
tests/: conftest.py  test_cli_smoke.py  test_credentials.py  test_linux_handler.py  test_local_json_source.py  test_logging_redaction.py  test_prioritizer.py  test_reboot_strategy.py  test_windows_handler.py
