[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchmgr"
version = "0.1.0"
description = "Cross-platform automated patch management CLI for Linux, Windows, and AIX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Security Engineering" }]
keywords = ["patch", "vulnerability", "cve", "automation", "linux", "windows", "aix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1,<9.0",
    "paramiko>=3.4,<4.0",
    "pywinrm>=0.4.3,<1.0",
    "requests-ntlm>=1.2,<2.0",
    "httpx>=0.27,<1.0",
    "diskcache>=5.6,<6.0",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-json-logger>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "tenacity>=8.2,<9.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
kerberos = ["pykerberos>=1.2; platform_system != 'Windows'"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
patchmgr = "patchmgr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"patchmgr.reporting" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
